--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <i class="uil uil-phone"></i>
        </a>
      </menu>
-     <form action="https://formsubmit.co/aleksandargvozdenovic78@gmail.com" method="POST" data-aos="fade-up" data-aos-delay="200">
+     <form action="https://formsubmit.co/9c3e6a9608cfaf52e095ebeeef6ad557" method="POST" data-aos="fade-up" data-aos-delay="200">
       <input type="text" name="Name" placeholder="Full Name">
       <input type="email" name="Email" placeholder="Email Address">
       <textarea rows="7" name="Message" placeholder="Message"></textarea>
