--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <img src="./assets/4.jpg" alt="Aleksandar's Image">
       </div>
       <h5 data-aos="fade-in">Hello, I'm Aleksandar!</h5>
-      <h1 data-aos="fade-in">Aspiring <span>Software Developer</span></h1>
+      <h1 data-aos="fade-in">Aspiring <span>Frontend Developer</span></h1>
       <p data-aos="fade-in">
-        I am passionate about programming and solving real-world challenges. Eager to grow, I strive to develop innovative solutions and deepen my knowledge in software development.
+        Motivated to grow through practical experience and continuous learning in JavaScript and React.
       </p>
       <div class="header__cta" data-aos="fade-up">
         <a href="#projects" class="btn">My Projects</a>
