--- a/index.html
+++ b/index.html
@@ -94,9 +94,37 @@
     <button class="btn" data-filter=".fullstack">Fullstack</button>
   </menu>
   <div class="container projects__container" data-aos="fade-in" data-aos-delay="200">
+   
     <article class="project frontend" data-order="1">
       <div class="project__image">
-        <img src="./assets/project1.jpg" alt="GG Almont Website">
+        <img src="./assets/project1.png" alt="Tic-Tac-Toe game">
+      </div>
+      <h5>Project Management App (React – Udemy Course Project) </h5>
+      <p>
+      Built an interactive project management application as part of a React-focused course. The app allows users to create, organize, and track projects and tasks, featuring effective state management, dynamic UI updates, and responsive design practices.
+      </p>
+      <div class="project__cta">
+        <a href="https://github.com/AleksandarGvozdenovic/Management-app" class="btn" target="_blank"><i class="uil uil-github-alt"></i></a>
+      </div>
+    </article>
+   
+   
+   
+    <article class="project frontend" data-order="2">
+      <div class="project__image">
+        <img src="./assets/project2.png" alt="Tic-Tac-Toe game">
+      </div>
+      <h5>Tic Tac Toe (React – Udemy Course Project) </h5>
+      <p>
+      Developed an interactive Tic Tac Toe game during a React-focused course. The project features dynamic component rendering, intuitive interactions, and responsive design. Demonstrates fundamental React concepts and practical frontend development skills.
+      </p>
+      <div class="project__cta">
+        <a href="https://github.com/AleksandarGvozdenovic/Tic-Tac-Toe_Game" class="btn" target="_blank"><i class="uil uil-github-alt"></i></a>
+      </div>
+    </article>
+    <article class="project frontend" data-order="3">
+      <div class="project__image">
+        <img src="./assets/project3.jpg" alt="GG Almont Website">
       </div>
       <h5>GG Almont Website </h5>
       <p>
@@ -107,9 +135,9 @@
         <a href="https://github.com/AleksandarGvozdenovic/GG-Almont" class="btn" target="_blank"><i class="uil uil-github-alt"></i></a>
       </div>
     </article>
-    <article class="project backend" data-order="2">
+    <article class="project " data-order="4">
       <div class="project__image">
-        <img src="./assets/project2.jpg" alt="Time Tracker App">
+        <img src="./assets/project4.jpg" alt="Time Tracker App">
       </div>
       <h5>Time Tracker</h5>
       <p>
@@ -119,9 +147,9 @@
         <a href="https://github.com/AleksandarGvozdenovic/Time-Tracker" class="btn" target="_blank"><i class="uil uil-github-alt"></i></a>
       </div>
     </article>
-    <article class="project fullstack" data-order="3">
+    <article class="project " data-order="5">
       <div class="project__image">
-        <img src="./assets/project3.jpg" alt="Weather App">
+        <img src="./assets/project5.jpg" alt="Weather App">
       </div>
       <h5>Weather App </h5>
       <p>
