--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <img src="./assets/4.jpg" alt="Aleksandar's Image">
       </div>
       <h5 data-aos="fade-in">Hello, I'm Aleksandar!</h5>
-      <h1 data-aos="fade-in">Aspiring <span>Software Developer</span></h1>
+      <h1 data-aos="fade-in"> <span>Front-end Developer</span></h1>
       <p data-aos="fade-in">
-       Motivated to grow through practical experience and continuous learning in software development, with a focus on JavaScript, React, and full-stack technologies.
+       Motivated to grow through practical experience and continuous learning in front-end development, with a focus on JavaScript, React, and modern UI technologies.
       </p>
       <div class="header__cta" data-aos="fade-up">
         <a href="#projects" class="btn">My Projects</a>
