Update portfolio layout, content and project assets

--- a/index.html
+++ b/index.html
@@ -315,5 +315,8 @@
     AOS.init({ duration: 1200, offset: 80 });
   </script>
   <script src="./script.js"></script>
+  <footer style="text-align:center; padding: 1.5rem 0; font-size: 0.8rem; color: #6b7280;">
+  © 2025 Aleksandar Gvozdenović. All rights reserved.
+</footer>
 </body>
 </html>
