Change title and role

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aleksandar Gvozdenović | Frontend Developer</title>
+  <title>Aleksandar Gvozdenović | Software Engineer</title>
 
   <!-- ==================================================================== -->
   <!-- ICONS                                                               -->
@@ -67,10 +67,10 @@
       </div>
       <h5 data-aos="fade-in">Hello, I'm Aleksandar</h5>
       <h1 data-aos="fade-in">
-        Junior <span>Frontend Developer</span>
+        Junior <span>Software Developer</span>
       </h1>
       <p data-aos="fade-in">
-        I’m a motivated junior frontend developer, ready to work, learn, collaborate
+        I’m a motivated junior Software developer, ready to work, learn, collaborate
         and contribute to real-world projects.
       </p>
       <div class="header__cta" data-aos="fade-up">
